--- a/AppWeb/Views/AdminUserLayout/ScriptPartial.cshtml
+++ b/AppWeb/Views/AdminUserLayout/ScriptPartial.cshtml
@@ -3,3 +3,6 @@
 <script src="~/adminweb/js/settings.js"></script>
 <script src="~/adminweb/js/gleek.js"></script>
 <script src="~/adminweb/js/styleSwitcher.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
