--- a/AppWeb/Views/AdminUserLayout/SidebarPartial.cshtml
+++ b/AppWeb/Views/AdminUserLayout/SidebarPartial.cshtml
@@ -3,19 +3,22 @@
         <ul class="metismenu" id="menu">
             <li>
                 <a href="/AdminMember/Index/" aria-expanded="false">
-                    <i class="icon-magic-wand menu-icon"></i><span class="nav-text">Home</span>
-                </a>
-            </li>
-            <li>
-                <a href="/AdminManager/Index/" aria-expanded="false">
-                    <i class="icon-speedometer menu-icon"></i><span class="nav-text">Kullanıcılar</span>
+                    <i class="icon-magic-wand menu-icon"></i><span class="nav-text">Ana Sayfa</span>
                 </a>
             </li>
             <li>
                 <a href="/AdminMember/Members/" aria-expanded="false">
-                    <i class="icon-user-follow  menu-icon"></i><span class="nav-text">Şifre Kasam</span>
+                    <i class="icon-lock menu-icon"></i><span class="nav-text">Şifre Kasam</span>
                 </a>
             </li>
+            @if (User.IsInRole("manager"))
+            {
+                <li>
+                    <a href="/AdminManager/Index/" aria-expanded="false">
+                        <i class="icon-speedometer menu-icon"></i><span class="nav-text">Kullanıcılar</span>
+                    </a>
+                </li>
+             } 
             <li>
                 <a href="/Login/Index/" aria-expanded="false">
                     <i class="icon-close menu-icon"></i><span class="nav-text">Çıkış Yap</span>
