--- a/AppWeb/Views/AdminMember/Members.cshtml
+++ b/AppWeb/Views/AdminMember/Members.cshtml
@@ -55,7 +55,7 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="addModalLabel">Yeni Şifre Ekle</h5>
+                <h5 class="modal-title" id="addModalLabel">Yeni Kullanıcı Bilgi Ekle</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -92,7 +92,7 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="updateModalLabel">Şifre Güncelle</h5>
+                <h5 class="modal-title" id="updateModalLabel">Bilgileri Güncelle</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -136,7 +136,7 @@
                 </button>
             </div>
             <div class="modal-body">
-                <p>Bu şifreyi silmek istediğinizden emin misiniz?</p>
+                <p>Bu bilgiyi silmek istediğinizden emin misiniz?</p>
                 <input type="hidden" id="deleteId" />
             </div>
             <div class="modal-footer">
